data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4457.wast
;; 6. **Test Description:** Create scenarios where `call_indirect` is invoked with insufficient operands on the stack, leading to operand stack underflow to ensure robust error handling.    - **Constraint:** Checks stack underflow conditions.    - **Improper Handling Relation:** Missing operands could lead to unexpected behavior or execution of invalid instructions.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $stack-underflow
      (i32.const 0)
      (call_indirect (type 0))
    )
  )
  "stack underflow"
)